src/App.module.css
.container {
    display: grid;
    grid-template-columns: 15fr minmax(0, 85fr);
    grid-template-rows: 4fr minmax(0, auto) 1.5rem;
    grid-template-areas:
        "nav main"
        "nav bottom"
        "footer footer";

    width: 100vw;
    height: 100vh;
    padding: 0;
    overflow: hidden;
}

footer {
    grid-area: footer;
    background-color: dodgerblue;
    height: 1.5rem;
    width: 100%;
    padding: 0 0.5rem;
    display: flex;
}

.appStatusBar>div {
    margin-right: 1em;
}

.appStatusBar>div:last-child {
    margin-right: 0;
}

table {
    width: 100%;
    max-width: 100%;
}

table {
    font-family: monospace;
    border-spacing: 0;
    max-width: 100%;
    table-layout: fixed;
}

table tr {
    height: 2.5em;
    max-width: 100%;
}

table th {
    text-align: left;
    font-weight: bold;
}

table td,
table th {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    min-width: 150px;
    padding: 0 0.5em;
}

table tbody tr:hover {
    background-color: rgba(0, 0, 0, 0.25);
}

nav {
    grid-area: nav;
    overflow: scroll;
    border-right: 1px #333333 solid;
    padding: 0 0.5rem;
}

nav ul {
    margin: 0;
}

nav details summary {
    height: 2.25em;
    line-height: 2.25em;
}

nav details>summary::before {
    content: "📁";
    margin: 0 .5em;
}

nav details[open]>summary::before {
    content: "📂";
}

nav details>summary::marker,
nav details>summary::-webkit-details-marker {
    display: none;
    content: "";
}

.gvkListIndented {
    padding-left: 1em;
}

nav details summary:hover {
    background-color: rgba(0, 0, 0, 0.4);
    cursor: pointer;
}

.mainArea {
    grid-area: main;
    overflow: scroll;
    padding: 0 0.5rem;
}

.bottomPanel {
    grid-area: "bottom";
}

.topBar {
    display: flex;
    align-items: center;
}

.topBar>* {
    margin: 0.5em;
}

.topBar>*:first-child {
    margin-left: 0;
}

.topBar>*:last-child {
    margin-right: 0;
}

